--- a/_posts/2019-07-07-the-us-narrative-today.html
+++ b/_posts/2019-07-07-the-us-narrative-today.html
@@ -2543,108 +2543,107 @@ stories:
   domain: http://www.heraldchronicle.com/
   link: https://www.heraldchronicle.com/news/world/iran-to-raise-uranium-enrichment-beyond-nuclear-deal-limits/article_7f42ea38-ba80-5547-84e6-d531b9b9b124.html
 images:
-- name: white-house-lawn-white-house-lawn-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-dali-three.jpg
-- name: dragon-desert-desert-dragon-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-rainbow-festival.jpg
-- name: birdhouse-birdhouse-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-kandinsky-bv.jpg
-- name: white-house-lawn-white-house-window-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-colorful-blocks.jpg
-- name: berlinwall-DSC-0084-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-purple-storm.jpg
-- name: gears-4882162452-fa3126b38d-b-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-dali-two.jpg
-- name: san-francisco-skyline-night-san-francisco-skyline-night-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-green-zuma.jpg
+- name: downtown-los-angeles-downtown-la-copper-circuit-2.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-copper-circuit-2.JPG
+- name: oldhouse-granaryfield-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-atari-asteroids.jpg
+- name: meadowbutterfly-meadow-butterfly-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-purple-storm.jpg
+- name: old-door-lock-old-door-lock-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-crafty-painting.jpg
+- name: power-lines-power-lines-empty-space-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-smooth-ride.jpg
+- name: white-house-lawn-white-house-lawn-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-purple-storm.jpg
+- name: downtheline-downtheline-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-crafty-painting.jpg
+- name: trucksilo-trucksilo-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-purp-paper.jpg
+- name: window-window-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-purple-storm.jpg
+- name: gears-4882162452-fa3126b38d-b-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-green-zuma.jpg
+- name: lincoln-memorial-lincolnmemorial-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-purp-paper.jpg
 - name: trucksilo-trucksilo-sunday.jpg
   url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-sunday.jpg
-- name: san-francisco-skyline-night-san-francisco-skyline-night-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-light-dali.jpg
-- name: razorwire-DSC-0080-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-dark-dali.jpg
-- name: file-00-00-59-36 2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/file-00-00-59-36
-    2.jpg
-- name: berlinwall2-berlinwall-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-atari-asteroids.jpg
-- name: white-house-whitehouse-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-atari-missle.jpg
-- name: oldroad-old-road-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-diego-rivera1.jpg
-- name: nyc-flag-nycflag-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-bright-sand.jpg
-- name: flower-barbed-wire-flower-barbed-wire-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-dry-skin.jpg
-- name: paris-paris-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-hot-spicy.jpg
-- name: aws-s3-stories-downtheline-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-downtheline-dali-three.jpg
-- name: abandonedbuildings_atari_missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_atari_missle.jpg
-- name: soldier-kneeling-26304845730-d4e495e25f-o-blue-circuit-5.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-blue-circuit-5.jpg
-- name: flower-barbed-wire-flower-barbed-wire-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-smoking-cigarette.jpg
-- name: gypsy-wagon-gypsywagon-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-marcel-duchamp.jpg
-- name: crow_colored_circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_colored_circuits.jpg
-- name: aws-s3-stories-new-20-132-800-500-0-max-0-1--1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-20-132-800-500-0-max-0-1--1.jpg
-- name: carry-load-carryload-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-crunch-paper.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-plentiful.jpg
-- name: scream-IMG_8494.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/scream-IMG_8494.jpg
-- name: aws-s3-stories-statue-face-open-mouth-blue-circuit.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-statue-face-open-mouth-blue-circuit.png
-- name: old-door-lock-old-door-lock-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-marcel-duchamp.jpg
-- name: legal-statue-legalstatue-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-emily-carr.jpg
-- name: oldtrain-oldtrain-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-rainbow-festival.jpg
-- name: store-on-corner-oldcabin-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-ww2-color.jpg
-- name: containership-containership-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-neo-instinct.jpg
-- name: walled-garden-walled-garden-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-light-dali.jpg
-- name: beach-clouds-lifeguard-beachclouds-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-purp-paper.jpg
-- name: docks-docks-copper-circuit-2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-copper-circuit-2.jpg
-- name: nyc-flag-nycflag-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-dark-rain.jpg
-- name: curtain-curtain-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-plentiful.jpg
-- name: old-church-oldchurch-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-gan-vogh.jpg
-- name: art-museum-art-museum-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-aqua.jpg
-- name: blossombar-creativity-file-00-00-50-62.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-creativity-file-00-00-50-62.jpg
-- name: flower-barbed-wire-flower-barbed-wire-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-spagetti-accident.jpg
-- name: old-granary-field-granaryfield-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-purp-paper.jpg
-- name: miamibeach-miamibeach-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-colorful-dream.jpg
-- name: downtheline-downtheline-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-plentiful.jpg
-- name: supreme-court-supremecourt-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-mucha-mult.jpg
-- name: oldhouse-granaryfield-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-kand-two.jpg
-- name: store-on-corner-oldcabin-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-yellow-paper.jpg
-- name: white-house-lawn-white-house-lawn-attack-planes.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-attack-planes.jpg
-- name: amusement-park-amusement-park-2-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-constitution.jpg
-- name: aws-s3-stories-supreme-court-judgement.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-supreme-court-judgement.jpg
+- name: razorwire-DSC-0080-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-colorful-blocks.jpg
+- name: abandonedbuildings_purp_paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_purp_paper.jpg
+- name: aws-s3-stories-border-traffic.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-border-traffic.jpg
+- name: mosaic-face-mosaic-face-china-prop.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-china-prop.jpg
+- name: los-angeles-from-observatory-losangeles-from-observatory-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-far-away.jpg
+- name: eduardo-eduardo-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-post-modern.jpg
+- name: store-on-corner-oldcabin-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-satan-red.jpg
+- name: aws-s3-stories-mosaic-face-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-mosaic-face-blue-circuit.jpg
+- name: locked-up-steam-lock-up-steam-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-atari-missle.jpg
+- name: aws-s3-stories-new-old-door-lock-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-old-door-lock-smoking-cigarette.jpg
+- name: walled-garden-walled-garden-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-blue-granite.jpg
+- name: power-lines-power-lines-empty-space-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-space-pizza.jpg
+- name: lincoln-memorial-lincolnmemorial-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-plentiful.jpg
+- name: castle-wall-DSC-0067-satan-red.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-satan-red.JPG
+- name: store-on-corner-store-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-rainbow-festival.jpg
+- name: gears-4882162452-fa3126b38d-b-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-purp-paper.jpg
+- name: beach-clouds-lifeguard-beachclouds-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-bright-sand.jpg
+- name: ellis-island-ellisisland-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-blue-brush.jpg
+- name: status-berlin-status-berlin-china-prop.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-china-prop.jpg
+- name: old-door-lock-old-door-lock-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-aqua.jpg
+- name: castle-wall-DSC-0067-sand-paper.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-sand-paper.JPG
+- name: crow_aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_aqua.jpg
+- name: oldhousecars-house-old-cars-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-smooth-ride.jpg
+- name: wreck-IMG_7054.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wreck-IMG_7054.jpg
+- name: aws-s3-stories-cargo-ship-on-sea-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-cargo-ship-on-sea-constitution.jpg
+- name: redondo-beach-harbor-redondo-beach-harbor-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-dark-dali.jpg
+- name: beach-rocks-beach-rocks-currents-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-nazi-poster.jpg
+- name: pigeons-on-the-ledge-pigeons-on-ledge-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-colorful-dream.jpg
+- name: flower-barbed-wire-flower-barbed-wire-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-kand-two.jpg
+- name: oldhotel-oldhotel-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-neo-instinct.jpg
+- name: death-valley-death-valley-national-park-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-ww2-dresden.jpg
+- name: oldtrain-oldtrain-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-blue-electricity.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-smooth-ride.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-smooth-ride.JPG
+- name: razorwire-DSC-0080-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-alien-goggles.jpg
+- name: soldier-kneeling-26304845730-d4e495e25f-o-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-crabapple.jpg
+- name: school-clouds-church-clouds-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-blue-brush.jpg
+- name: amusement-park-amusement-park-2-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-sunday.jpg
+- name: fence-gorilla-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-gorilla-blue-circuit.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-wols.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-wols.JPG
 ---
 Angielski Dominuje Na Maturze.&nbsp;Las Vegas Roller Coaster Swaying In Quake.&nbsp;Trojans Outlast Union In Championship Shootout.&nbsp;California Governor Says Earthquakes Are A 'wakeup Call'.&nbsp;Seattle Police Investigate Fatal Shooting In Belltown.&nbsp;Aiken City Council Contemplates 'development Commission' At Monday Work Session.&nbsp;The Future Or Extinction Of Our National Park System Is Upon Us.&nbsp;July Book Buzz Is Out Of This World.&nbsp;
